# stm32wb-hal

./: Cargo.toml  README.md  build_and_upload.sh  dfu-upload.py  memory_xC.x  memory_xE.x  memory_xG.x
examples/: usb_serial.rs
src/: delay.rs  gpio.rs  ipcc.rs  lib.rs  prelude.rs  pwm.rs  pwr.rs  rtc.rs  smps.rs  tl_mbox.rs  usb.rs
src/rcc/: mod.rs
src/tl_mbox/: ble.rs  evt.rs  lhci.rs  shci.rs
