[package]
name = "stm32wb-hal"
version = "0.1.14"
authors = ["eupn <eupn@protonmail.com>"]
description = "Hardware abstraction layer for the STM32WB55 chips"
keywords = ["no-std", "stm32wb", "stm32wb55", "stm32wb5mmg", "embedded", "embedded-hal"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
repository = "https://github.com/eupn/stm32wb-hal"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".travis.yml",
	".gitignore",
	"docs/",
	"docs/*"
]
edition = "2018"

[dependencies]
cortex-m = "0.7.7"
embedded-dma = "0.1"
# TG-TODO: update nb to "1.1.0
nb = "0.1.1"
# TG-TODO: update as-slice to "0.2.1"
as-slice = "0.1"
# TG-TODO: update cortex-m-semihosting to "0.5.0"
cortex-m-semihosting = { version = "0.3.5", features = ["jlink-quirks"] }
# TG-CHANGE: updated bit_field to "0.10.2" from "0.10.0"
bit_field = "0.10.2" 
heapless = "0.5.3"
stm32wb = {version="0.15.1", features=["stm32wb55"]}

[dependencies.stm32-device-signature]
version = "0.3.0"
features = ["stm32wb5x"]

[dependencies.cast]
version  = "0.2.2"
default-features = false

[dependencies.void]
version = "1.0.2"
default-features = false

[dependencies.stable_deref_trait]
default-features = false
version = "1.1"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.stm32-usbd]
version = "0.5.0"
features = ["ram_access_2x16"]
optional = true

[features]
# see pageage differences https://www.st.com/en/microcontrollers-microprocessors/stm32wbx5.html
xC-package = []
xE-package = []
xG-package = []
stm32-usbd = ["dep:stm32-usbd"]

# the "rt" feature is the "runtime" feature, which is used to enable cortex-m-rt
# TG-TODO: flesh this explainer out
rt = ["stm32wb/rt"]

default = [ "rt" ]

[dev-dependencies]
# TG-REMOVED: # cortex-m-rtfm = "0.5"
panic-halt = "0.2.0"
panic-semihosting = "0.5.0"
cortex-m-semihosting = { version = "0.3.5", features = ["jlink-quirks"] }
# TG-CHANGE: upgraded to "0.7.3" from "0.6.6"
cortex-m-rt = "0.7.3"
usb-device = "0.2"
usbd-serial = "0.1.0"

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true
